Add thread concurrency example for platform and virtual